<resources>
    <string name="app_name">PasswordEncryption</string>
    <string name="login_dialog_title">Login</string>
    <string name="dialog_login_accept_btn">Accept</string>
    <string name="login_name">Name:</string>
    <string name="login_pass">Password:</string>
    <string name="login_name_hint">Name…</string>
    <string name="login_pass_hint">Password…</string>
    <string name="register_dialog_title">Register</string>
    <string name="btn_login_text">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">Create new user</string>
    <string name="public_key">Public Key:</string>
    <string name="private_key">Private Key:</string>
    <string name="password_encrypted">Encrypted:</string>
    <string name="password_decrypted">Decrypted:</string>
</resources>
