<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:layout_row="0"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/textName"
            style="@style/ResultText"
            android:text="@string/login_name_hint" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pass"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/textPassword"
            style="@style/ResultText"
            android:text="@string/login_pass_hint" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_key"
            android:layout_row="2"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/textPublicKey"
            style="@style/ResultText"
            android:text="@string/login_pass_hint" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_key"
            android:layout_row="3"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/textPrivateKey"
            style="@style/ResultText"
            android:text="@string/login_pass_hint" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_encrypted"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/textPassEncrypted"
            style="@style/ResultText"
            android:text="@string/login_pass_hint" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_decrypted"
            android:layout_row="5"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/textPassDecrypted"
            style="@style/ResultText"
            android:text="@string/login_pass_hint" />



    </GridLayout>
</ScrollView>
