<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/login_name" />
    <EditText
        android:id="@+id/editLoginName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_name_hint"
        android:inputType="textCapSentences"
        android:ems="8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/login_pass"/>
    <EditText
        android:id="@+id/editLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_pass_hint"
        android:inputType="textPassword"
        android:ems="8"/>


</LinearLayout>